Bug 1297835.  Don't suppress the scroll bits of a non-open <details> that has the appropriate overflow styles.  r=TYLin